--- a/builder/css/main.scss
+++ b/builder/css/main.scss
@@ -8,6 +8,16 @@ body {
     overflow: hidden;
     touch-action: none;
     font-family: sans-serif;
+    background-color: #345;
+    color: white;
+}
+
+canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 16px;
 }
 
 .tools-wrap {
@@ -24,20 +34,22 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
             width: 60px;
             height: 60px;
-            border: 2px solid rgba(0,0,0,.3);
+            border: 2px solid rgba(255, 255, 255, .3);
             border-radius: 50%;
             margin: 10px;
             opacity: .3;
             cursor: pointer;
             font-size: 10px;
             text-transform: uppercase;
-            color: rgba(0,0,0,.7);
+            color: rgba(255, 255, 255, .7);
             letter-spacing: .05em;
             font-weight: bold;
             overflow: hidden;
             background-color: inherit;
+            user-select: none;
 
             &:hover {
                 opacity: 1;
@@ -45,14 +57,26 @@ body {
 
             &.selected {
                 opacity: 1;
-                background-color: #f0f0f0;
+                background-color: white;
+                color: #345;
             }
         }
 
         &.colors {
+            opacity: 0;
+            transition: opacity .2s ease;
+
             li {
-                width: 25px;
-                height: 25px;
+                width: 16px;
+                height: 16px;
+                border: none;
+                opacity: .6;
+                transition: all .1s ease;
+
+                &.selected {
+                    opacity: 1;
+                    transform: scale(2);
+                }
             }
         }
     }
@@ -72,4 +96,33 @@ body {
 
 [data-color="yellow"] {
     background-color: #f7dc0a !important;
+}
+
+button {
+    display: block;
+    color: inherit;
+    background-color: rgba(0,0,0,.2);
+    border: none;
+    border-radius: 4px;
+    margin: 0 .5em;
+    padding: 1em 2em;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: .8em;
+    letter-spacing: .05em;
+    user-select: none;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        background-color: rgba(0,0,0,.3);
+    }
+}
+
+.buttons {
+    display: flex;
+    position: absolute;
+    bottom: 64px;
+    left: 50%;
+    transform: translate(-50%);
 }
