--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -25,12 +25,30 @@ body {
         bottom: 0;
         left: 0;
         padding: 2em;
+        background-color: rgba(0,0,0,.1);
+        transition: bottom .5s ease-in-out;
+
+        &:empty {
+            bottom: -100%;
+            padding: 0;
+        }
     }
 }
 
 #canvas-wrap {
     flex: 1;
     background-color: rgb(245,250,255);
+}
+
+p {
+    margin-bottom: 1em;
+}
+
+h3 {
+    font-size: 1rem;
+    text-align: center;
+    font-weight: normal;
+    margin-bottom: 1em;
 }
 
 button {
@@ -57,7 +75,6 @@ input[type="number"] {
     width: 64px;
     height: 24px;
     padding: 16px;
-    margin-top: 1em;
     font-size: 1em;
     background-color: rgba(0,0,0,.2);
     color: inherit;
@@ -75,4 +92,66 @@ input[type="number"] {
         -webkit-appearance: none;
 
     }
+}
+
+input[type="checkbox"] {
+    position: relative;
+    width: 32px;
+    height: 32px;
+    background-color: rgba(0,0,0,.2);
+    border: none;
+    border-radius: 4px;
+    -webkit-appearance: none;
+    cursor: pointer;
+    vertical-align: middle;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        background-color: rgba(0,0,0,.3);
+    }
+
+    &:checked::after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        content: "✓";
+        color: white;
+        font-size: 1.6em;
+        transform: translate(-50%, -50%);
+    }
+}
+
+input[type="checkbox"] {
+    position: relative;
+    width: 32px;
+    height: 32px;
+    background-color: rgba(0,0,0,.2);
+    border: none;
+    border-radius: 4px;
+    -webkit-appearance: none;
+    cursor: pointer;
+    vertical-align: middle;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        background-color: rgba(0,0,0,.3);
+    }
+
+    &:checked::after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        content: "✓";
+        color: white;
+        font-size: 1.6em;
+        transform: translate(-50%, -50%);
+    }
+}
+
+label {
+    display: inline-block;
+    margin-left: .5em;
+    pointer-events: none;
 }
