--- a/builder/css/main.scss
+++ b/builder/css/main.scss
@@ -54,7 +54,7 @@ canvas {
             user-select: none;
             overflow: visible;
 
-            &::after {
+            &:nth-child(-n+9)::after {
                 content: counter(tool);
                 counter-increment: tool;
                 position: absolute;
@@ -88,7 +88,7 @@ canvas {
                 opacity: 1;
                 transition: all .1s ease;
 
-                &::after {
+                &:nth-child(-n+9)::after {
                     content: attr(data-shortcut);
                     display: flex;
                     justify-content: center;
