--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -57,7 +57,7 @@ button {
     background-color: rgba(0,0,0,.2);
     border: none;
     border-radius: 4px;
-    margin-top: 1em;
+    margin: 1em auto 0 auto;
     padding: 1em 2em;
     cursor: pointer;
     text-transform: uppercase;
