Minor checkbox style update

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -119,10 +119,11 @@ input[type="checkbox"] {
     }
 
     &:checked::after {
+        content: "✓";
         position: absolute;
         top: 50%;
         left: 50%;
-        content: "✓";
+        font-weight: bold;
         color: white;
         font-size: 1.6em;
         transform: translate(-50%, -50%);
