--- a/public/home/main.scss
+++ b/public/home/main.scss
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Barlow:400,700&display=swap');
+
 $primary-color: #673ab7;
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Barlow', sans-serif;
 }
 
 body {
-    font-family: sans-serif;
+    font-size: 18px;
     padding: 16px;
     background-color: transparentize($primary-color, .9);
 }
@@ -54,7 +57,7 @@ button {
     padding: 8px 16px;
     background-color: transparentize($primary-color, .9);
     color: $primary-color;
-    font-size: 12px;
+    font-size: 14px;
     border: none;
     border-radius: 4px;
     text-transform: uppercase;
@@ -88,8 +91,8 @@ button {
             margin-right: 16px;
         }
 
-        p {
-            font-weight: bold;
+        h4 {
+            margin-bottom: 0;
         }
     }
 }
