--- a/src/client/home/scss/home.scss
+++ b/src/client/home/scss/home.scss
@@ -1,9 +1,105 @@
+@import url('https://fonts.googleapis.com/css?family=Barlow:400,700&display=swap');
+
+$primary-color: #673ab7;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Barlow', sans-serif;
 }
 
 body {
-    font-family: sans-serif;
+    font-size: 18px;
+    padding: 16px;
+    background-color: transparentize($primary-color, .9);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 1em;
+}
+
+h1 {
+    color: $primary-color;
+}
+
+a {
+    color: $primary-color;
+    text-decoration: none;
+
+    &:focus,
+    &:hover {
+        outline: none;
+        text-decoration: underline;
+    }
+}
+
+input {
+    border: 0;
+    font-size: 1em;
+
+    &[type="text"] {
+        border-bottom: 1px solid transparentize($primary-color, .8);
+        padding: 4px;
+        margin-bottom: 8px;
+        transition: border-color .2s ease;
+
+        &:focus {
+            outline: none;
+            border-color: $primary-color;
+        }
+    }
+}
+
+button {
+    display: block;
+    -webkit-appearance: initial;
+    padding: 8px 16px;
+    background-color: transparentize($primary-color, .9);
+    color: $primary-color;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;
+    text-transform: uppercase;
+    letter-spacing: 0.02em;
+    font-weight: bold;
+    margin: auto auto 0 auto;
+    cursor: pointer;
+    transition: background-color .2s ease;
+
+    &:hover {
+        background-color: transparentize($primary-color, .85);
+    }
+}
+
+.wrap {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-flow: row wrap;
+
+    > div {
+        flex: 0 0 calc(20% - (16px / 5 * 4));
+        display: flex;
+        flex-flow: column;
+        margin-bottom: 16px;
+
+        &:not(:nth-child(5n)) {
+            margin-right: 16px;
+        }
+
+        h4 {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.box {
+    padding: 16px;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 8px 16px transparentize($primary-color, .85);
 }
