--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -38,8 +38,50 @@ body {
 }
 
 #canvas-wrap {
+    position: relative;
     flex: 1;
     background-color: rgb(245,250,255);
+
+    #debug {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        &::before,
+        &::after {
+            content: "";
+            background-color: black;
+            position: absolute;
+    
+        }
+        &::before {
+            top: 0;
+            left: 50%;
+            width: 1px;
+            height: 100%;
+            z-index: 100;
+        }
+    
+        &::after {
+            top: 50%;
+            left: 5;
+            width: 100%;
+            height: 1px;
+        }
+    }
+
+    #svg-wrap {
+        transform-origin: center center;
+        z-index: -1;
+
+        .cell:hover {
+            fill: black;
+        }
+    }
+
 }
 
 p {
