--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -79,6 +79,8 @@ body {
         z-index: -1;
         
         .tile {
+            fill: transparent;
+            stroke: none;
             // fill: rgba(0,0,0,.1);
 
             &:hover {
