--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -92,6 +92,7 @@ body {
         #grid {
             * {
                 pointer-events: none;
+                user-select: none;
             }
         }
 
@@ -116,6 +117,19 @@ body {
                         fill: rgba(0, 255, 0, .3);
                     }
                 }
+            }
+        }
+
+        #grid {
+            display: none;
+
+            &.visible {
+                display: block;
+            }
+            
+            rect {
+                fill: transparent;
+                stroke-width: .25;
             }
         }
     }
