Fix heroes exiting

--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -120,6 +120,16 @@ body {
             }
         }
 
+        #heroes {
+            .hero {
+                transition: opacity .3s ease;
+
+                &.exited {
+                    opacity: 0;
+                }
+            }
+        }
+
         #grid {
             display: none;
 
