--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -38,8 +38,9 @@ body {
 }
 
 #canvas-wrap {
+    position: relative;
     flex: 1;
-    background-color: rgb(245,250,255);
+    background-color: rgb(245, 250, 255);
 }
 
 p {
@@ -51,7 +52,7 @@ p {
 
     &.small {
         font-size: .825rem;
-        color: rgba(0,0,0,.5);
+        color: rgba(0, 0, 0, .5);
         margin-top: -1em;
     }
 }
@@ -162,4 +163,57 @@ label {
     user-select: none;
     color: $primary-color;
     opacity: .6;
+}
+
+.alert {
+    cursor: pointer;
+    padding: 2px 5px;
+    font-size: 100%;
+    width: 2px;
+    height: 0;
+    float: right;
+    margin-top: 5px;
+    position: relative;
+    user-select: none;
+
+    &:hover {
+        font-size: 241%;
+        left: -11px;
+        top: -11px;
+    }
+}
+
+.member {
+    .current {
+        font-weight: bold;
+    }
+}
+
+.alert-modal {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 200px inset #ff0000;
+    position: absolute;
+    top: 0;
+    transition: 3s all;
+    user-select: none;
+
+    .message {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 8%;
+        font-size: 31pt;
+        color: #ffffff;
+        text-shadow: 2px 2px 2px #e93131, 0px 0px 5px #a59b9b;
+        transition: 3s all;
+    }
+
+    &.hide {
+        box-shadow: none;
+
+        .message {
+            opacity: 0.0;
+        }
+    }
 }
