--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -16,10 +16,12 @@ body {
     position: relative;
     width: 300px;
     height: 100vh;
-    background-color: transparentize($primary-color, .9);
+    background-color: #EFEBF8;
     color: black;
     padding: 2em;
     font-family: sans-serif;
+    border-right: #DCCCFE;
+    z-index: 10;
 
     #admin {
         position: absolute;
@@ -215,5 +217,25 @@ label {
         .message {
             opacity: 0.0;
         }
+    }
+}
+
+.game-over-modal {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+
+    .message {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 20%;
+        font-size: 31pt;
+        color: #6F6581;
+        background-color: #F8F7FC;
+        padding: 40px 30px;
+        box-shadow: 0px 2px 7px #5d5d5d;
     }
 }
