--- a/src/client/play/scss/play.scss
+++ b/src/client/play/scss/play.scss
@@ -191,21 +191,27 @@ label {
     }
 }
 
-.alert-modal {
+.modal {
     width: 100%;
     height: 100%;
-    box-shadow: 0 0 200px inset #ff0000;
     position: absolute;
     top: 0;
-    transition: 3s all;
-    user-select: none;
 
     .message {
         width: 100%;
         text-align: center;
         position: absolute;
-        top: 8%;
         font-size: 31pt;
+    }
+}
+
+.alert-modal {
+    box-shadow: 0 0 200px inset #ff0000;
+    transition: 3s all;
+    user-select: none;
+
+    .message {
+        top: 8%;
         color: #ffffff;
         text-shadow: 2px 2px 2px #e93131, 0px 0px 5px #a59b9b;
         transition: 3s all;
@@ -221,21 +227,23 @@ label {
 }
 
 .game-over-modal {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
     background-color: rgba(0, 0, 0, 0.4);
 
     .message {
-        width: 100%;
-        text-align: center;
-        position: absolute;
         top: 20%;
-        font-size: 31pt;
         color: #6F6581;
         background-color: #F8F7FC;
         padding: 40px 30px;
         box-shadow: 0px 2px 7px #5d5d5d;
+    }
+}
+
+.pause-modal {
+    background-color: rgb(188, 183, 199);
+
+    .message {
+        top: 50%;
+        transform: translateY(-50%);
+        color: #827697;
     }
 }
