Include link back to GitHub on the main page
Players that just find the site randomly will not be aware that the
project is developed in the open and that their feedback is welcome.
Including a link back to GitHub on the main page should help drive more
traffic and ideas to the project.

Signed-off-by: Remy Suen <remy.suen@gmail.com>

--- a/src/client/home/scss/home.scss
+++ b/src/client/home/scss/home.scss
@@ -93,6 +93,21 @@ h1 {
     }
 }
 
+.banner {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    color: $primary-color;
+    font-size: 1.1rem;
+    margin: 2rem 0;
+    user-select: none;
+
+    a {
+        font-weight: bold;
+        color: #000000;
+    }
+}
+
 a {
     color: $primary-color;
     text-decoration: none;
